--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -17,7 +17,7 @@
       <h3><%= user.email %></h3>
 
       <div class="my-5">
-        <a href="/" class="btn btn-danger mx-3">LogOut</a>
+        <a href="/logout" class="btn btn-danger mx-3">LogOut</a>
       </div>
     </div>
   </body>
